Updated the project structure

--- a/components/SideBar/SideBar.css
+++ b/components/SideBar/SideBar.css
@@ -3,7 +3,8 @@
   row-gap: 0.125em;
   width: 100%;
   grid-area: sidebar;
-  background: #fff;
+  background: red;
+  -webkit-user-select: none;
   user-select: none;
   grid-template-rows: 130px repeat(14, 1fr);
   border-right: 0.0625em solid #b4adad3a;
