--- a/containers/Index.css
+++ b/containers/Index.css
@@ -22,10 +22,12 @@ html,
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
   margin: 0;
+  -webkit-user-select: none;
   user-select: none;
   min-width: 524px;
   min-height: 100vdh;
