--- a/components/css/SideBar.css
+++ b/components/css/SideBar.css
@@ -14,12 +14,13 @@
   object-position: center;
   border-bottom: 1px dashed rgba(192, 189, 189, 0.753);
 }
+
 #SideBar .nav-item {
   display: grid;
   padding: 0px 0px 0px 12px;
   grid-template-columns: 32px auto;
   align-items: center;
-  font-size: 0.8em;
+  font-size: .77em;
   cursor: pointer;
   color: rgb(80, 77, 77);
   text-decoration: none;
