--- a/containers/css/Teacher.css
+++ b/containers/css/Teacher.css
@@ -1,10 +1,1 @@
-#Teacher {
-  display: grid;
-  grid-template-rows: 40px auto;
-  row-gap: 10px;
-  grid-template-areas:
-    "toolbar"
-    "studentlist";
-  padding: 20px 20px 10px 20px;
-  overflow-y: auto;
-}
+@import url('common.css');
